# septa-api

./: Cargo.toml  README.md  septa-api.code-workspace
.github/workflows/: ci.yml  live-endpoint.yml  pull-gtfs-data.yml  release.yml  update-dependancies.yml  update-dependencies.yml
examples/: client_example.rs  example_client.rs  geojson_example.rs
src/: client.rs  deserialize.rs  errors.rs  lib.rs  requests.rs  responses.rs  types.rs
tests/: arrivals.rs  gtfs_test.rs  live_endpoint_canary.rs  next_to_arrive.rs  rail_schedule.rs  train_view.rs
tests/gtfs_data/: README.md
