[package]
name = "septa-api"
version = "0.4.0"
edition = "2021"
description = "SEPTA Async Rust API Client"
keywords = ["septa", "api", "public-transit", "regional-rail", "train"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/septa-api/"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "MIT"

include = [
    "/src/**/*.rs",
    "/examples/*.rs",
    "/README.md", 
    "/LICENSE"
]

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.7"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
gtfs-structures = "0.42.0"
geojson = "0.24.1"
once_cell = "1.20.2"
serde_path_to_error = "0.1.16"

[[example]]
name = "client_example"
crate-type = ["bin"]

[[example]]
name = "geojson_example"
crate-type = ["bin"]
