[package]
name = "septa-api"
version = "0.4.0"
edition = "2021"
description = "SEPTA Async Rust API Client"
keywords = ["septa", "api", "public-transit", "regional-rail", "train"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/septa-api/"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "MIT"

include = [
    "/src/**/*.rs",
    "/examples/*.rs",
    "/README.md", 
    "/LICENSE"
]

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
gtfs-structures = "0.43.0"
geojson = "0.24.1"
once_cell = "1.20.3"
serde_path_to_error = "0.1.16"

[[example]]
name = "client_example"
crate-type = ["bin"]

[[example]]
name = "geojson_example"
crate-type = ["bin"]
